--- a/DesignerRHN/DesignerRHN-war/web/EmplVigenciaLocalizacion.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/EmplVigenciaLocalizacion.xhtml
@@ -11,7 +11,7 @@
         <ui:composition template="/Template.xhtml">
             <ui:define name="body">                  
                 <h:form id="form"> 
-                    <p:panel  id="PanelTotal" header="Históricos de Localizaciones" style=" font-size: 12px; position: absolute; width: 874px; height: 555px; left: 300px; top: 100px;text-align: left" >  
+                    <p:panel  id="PanelTotal" header="Históricos de Localizaciones" style=" font-size: 12px; position: absolute; width: 874px; height: 545px; text-align: left" >  
                         <h:outputText style="position: absolute; left: 500px; top: 45px; width: 200px; height: 12px;position: absolute;color: red; font-weight: bold" id="nombreEmpleado" value="#{controlVigenciaLocalizacion.empleado.persona.primerapellido} #{controlVigenciaLocalizacion.empleado.persona.segundoapellido} #{controlVigenciaLocalizacion.empleado.persona.nombre}">
                         </h:outputText>  
 
@@ -588,10 +588,10 @@
                         </p:dialog>
 
 
-                        <p:commandButton style="position: absolute; left: 650px; top: 530px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="ACEPTAR" value="Aceptar" icon="ui-icon-check" onclick="confirmarGuardar.show();" update=":form:datosVLEmpleado" process="@this" />
-                        <p:commandButton style="position: absolute; left: 200px; top: 530px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="REFRESCAR" value="Refrescar" icon="ui-icon-refresh" actionListener="#{controlVigenciaLocalizacion.cancelarModificacion()}" process="@this" />
-                        <p:commandButton style="position: absolute; left: 750px; top: 530px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="ATRAS" value="Atras" icon="ui-icon-arrowreturnthick-1-w"  actionListener="#{controlVigenciaLocalizacion.salir()}" action="nomina" process="@this" />
-                        <p:commandButton style="position: absolute; left: 20px; top: 530px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="ARCHIVOPLANO" value="Archivo Plano Prorrateos" process="@this" />
+                        <p:commandButton style="position: absolute; left: 650px; top: 527px;height: 23px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="ACEPTAR" value="Aceptar" icon="ui-icon-check" onclick="confirmarGuardar.show();" update=":form:datosVLEmpleado" process="@this" />
+                        <p:commandButton style="position: absolute; left: 200px; top: 527px;height: 23px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="REFRESCAR" value="Refrescar" icon="ui-icon-refresh" actionListener="#{controlVigenciaLocalizacion.cancelarModificacion()}" process="@this" />
+                        <p:commandButton style="position: absolute; left: 750px; top: 527px;height: 23px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="ATRAS" value="Atras" icon="ui-icon-arrowreturnthick-1-w"  actionListener="#{controlVigenciaLocalizacion.salir()}" action="nomina" process="@this" />
+                        <p:commandButton style="position: absolute; left: 20px; top: 527px;height: 23px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="ARCHIVOPLANO" value="Archivo Plano Prorrateos" process="@this" />
 
                     </p:panel>
 
