--- a/DesignerRHN/DesignerRHN-war/web/EmplVigenciaReformaLaboral.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/EmplVigenciaReformaLaboral.xhtml
@@ -14,11 +14,9 @@
                 <h:form id="form"> 
                     <p:panel  id="PanelTotal" header="Históricos Reformas Laborales" style=" font-size: 12px; position: absolute; width: 874px; height: 530px; text-align: left" >  
 
-                        <h:outputText id="btn" style="position: absolute; left: 25px; top: 40px; background-image: url(Imagenes/icon-question-big.png); width:60px ;height:60px; background-repeat: no-repeat; background-size: 100% 100%; "/>
-                        <p:tooltip style="font-size: 12px" for="btn" value="Ingrese la reforma laboral, todos los empleados nuevos deben ser acogidos." showEffect="slide" hideEffect="slide"/>
-                        <p:inputText style="position: absolute; left: 90px; top: 80px; width: 200px; height: 12px;position: absolute; " readonly="true" id="nombreEmpleado" value="#{controlVigenciasReformasLaborales.empleado.persona.primerapellido} #{controlVigenciasReformasLaborales.empleado.persona.segundoapellido} #{controlVigenciasReformasLaborales.empleado.persona.nombre}"/>  
+                        <h:outputText style="position: absolute; left: 640px; top: 50px; width: 200px; height: 12px;position: absolute; "  id="nombreEmpleado" value="#{controlVigenciasReformasLaborales.empleado.persona.primerapellido} #{controlVigenciasReformasLaborales.empleado.persona.segundoapellido} #{controlVigenciasReformasLaborales.empleado.persona.nombre}"/>  
 
-                        <p:toolbar style="font-size: 12px; position: absolute; top: 70px; left: 540px;">  
+                        <p:toolbar style="font-size: 12px; position: absolute; top: 50px; left: 20px;">  
                             <p:toolbarGroup align="left"> 
 
                                 <p:commandButton id="guardarRapido" value="" style="background-image: url(Imagenes/guardar.jpg); background-size: 100% 100%; background-repeat: no-repeat; width: 25px; height: 25px; " actionListener="#{controlVigenciasReformasLaborales.guardarCambiosVRL()}" process="@this" />
