--- a/DesignerRHN/DesignerRHN-war/web/NReporteNomina.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/NReporteNomina.xhtml
@@ -30,18 +30,18 @@
                         <fieldset style="position: absolute; left: 150px; top: 235px; font-size: 10px; width: 690px; height: 270px; border-radius: 10px; ">
                             <legend style="font-size: 11px; color: blue;text-align:left"><strong>Reportes Predefinidos - Nómina</strong></legend>
 
-                            <p:dataTable id="reportesNomina" var="info" rowKey="#{info.secuencia}" rowIndexVar="indice" style="font-size: 10px; border: 1px;"                           
-                                         value="#{controlNReporteNomina.listaIR}" scrollable="true" scrollHeight="170" scrollWidth="670"
+                            <p:dataTable id="reportesNomina" var="info" rowKey="#{info.secuencia}" rowIndexVar="indice" style="font-size: 10px; border: 1px;width: 690px"                           
+                                         value="#{controlNReporteNomina.listaIR}" scrollable="true" scrollHeight="170" scrollWidth="690"
                                          filteredValue="#{controlNReporteNomina.filtrarListInforeportesUsuario}" emptyMessage="No se encontrarón resultados para la búsqueda"
                                          editable="true" editMode="cell" paginator="true" rows="5"
                                          paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}">
 
-                                <p:column style="padding: 0px; text-align: center" id="codigoIR" headerText="Código" width="70" sortBy="#{info.codigo}" filterBy="#{info.codigo}" filterMatchMode="contains"  filterStyle="display: none; visibility: hidden;"  >  
+                                <p:column style="padding: 0px; text-align: center" id="codigoIR" headerText="Código" width="50" sortBy="#{info.codigo}" filterBy="#{info.codigo}" filterMatchMode="contains"  filterStyle="display: none; visibility: hidden;"  >  
                                     <h:outputText value="#{info.codigo}" >
                                     </h:outputText>
                                 </p:column>
 
-                                <p:column  id="reporteIR" headerText="Reporte" width="310" sortBy="#{info.nombre}" filterBy="#{info.nombre}" filterMatchMode="contains" style="height: 20px" filterStyle="display: none; visibility: hidden;"  >  
+                                <p:column  id="reporteIR" headerText="Reporte" width="300" sortBy="#{info.nombre}" filterBy="#{info.nombre}" filterMatchMode="contains" style="height: 20px" filterStyle="display: none; visibility: hidden;"  >  
                                     <p:cellEditor >  
                                         <f:facet name="output"><h:outputText style="width:260px" value="#{info.nombre}" /></f:facet>  
                                         <f:facet name="input">
@@ -64,8 +64,8 @@
                                     </p:selectOneMenu>
                                 </p:column>
 
-                                <p:column style="padding: 0px;text-align: center" width="110" filterStyle="display: none; visibility: hidden;" >                                  
-                                    <p:commandButton value="Generar Reporte" style="alignment-adjust: central;width: 100px; border-radius: 0px" actionListener="#{controlNReporteNomina.generarReporte(indice)}" process="@this"/>
+                                <p:column style="padding: 0px;text-align: center" width="120" filterStyle="display: none; visibility: hidden;" >                                  
+                                    <p:commandButton value="Generar Reporte" style="alignment-adjust: central;width: 110px; border-radius: 0px" actionListener="#{controlNReporteNomina.generarReporte(indice)}" process="@this"/>
                                 </p:column>
                             </p:dataTable>
 
@@ -115,7 +115,7 @@
                         <fieldset id="parametrosInforme" style="position: absolute; left: 10px; top: 70px; font-size: 10px; width: 830px; height: 150px; border-radius: 10px; ">
                             <legend style="font-size: 11px; color: blue;text-align:left"><strong>Parametros</strong></legend>
 
-                            <h:outputText value="Fecha desde" style="position: absolute; top: 15px; left: 50px;font-size: 11px;"/>
+                            <h:outputText value="Fecha desde" style="position: absolute; top: 15px; left: 30px;font-size: 11px;"/>
                             <p:calendar  value="#{controlNReporteNomina.parametroDeInforme.fechadesde}" id="fechaDesdeParametro" style="position: absolute; top: 7px; left: 130px;font-size: 11px;" styleClass="ui-datepicker, calendarioReportes"  navigator="true" showButtonPanel="true" locale="es" pattern="dd/MM/yyyy"
                                          autocomplete="true" onclick="select();">    
                                 <p:ajax event="dateSelect" listener="#{controlNReporteNomina.modificarParametroInforme()}" update="fechaDesdeParametro"/>
@@ -124,14 +124,14 @@
                                 <f:convertDateTime pattern="dd/MM/yyyy" />
                             </p:calendar>
 
-                            <h:outputText value="Empleado desde" style="position: absolute; top: 40px; left: 50px;font-size: 11px;"/>
+                            <h:outputText value="Empleado desde" style="position: absolute; top: 40px; left: 30px;font-size: 11px;"/>
                             <p:inputText value="#{controlNReporteNomina.parametroDeInforme.codigoempleadodesde}" id="empleadoDesdeParametro" style="position: absolute; top: 35px; left: 130px;font-size: 11px;height: 10px;width: 90px;" onclick="select();">
                                 <p:ajax event="click" listener="#{controlNReporteNomina.posicionCelda(2)}" process="@this"/> 
                                 <p:ajax event="change" listener="#{controlNReporteNomina.modificarParametroInforme()}" update="empleadoDesdeParametro"/>
                                 <p:ajax event="dblclick" listener="#{controlNReporteNomina.dialogosParametros(2)}" process="@this"/> 
                             </p:inputText>
 
-                            <h:outputText value="Estado" style="position: absolute; top: 65px; left: 50px;font-size: 11px;"/>
+                            <h:outputText value="Estado" style="position: absolute; top: 65px; left: 30px;font-size: 11px;"/>
                             <p:selectOneMenu value="#{controlNReporteNomina.parametroDeInforme.estadosolucionnodo}" id="estadoParametro" style="position: absolute; top: 58px; left: 130px;font-size: 11px;width: 100px; text-transform: uppercase" >  
                                 <f:selectItem itemLabel="" itemValue="" />  
                                 <f:selectItem itemLabel="CERRADO" itemValue="CERRADO" />  
@@ -139,21 +139,21 @@
                                 <p:ajax event="change" listener="#{controlNReporteNomina.modificarParametroInforme()}" update="estadoParametro" process="@this"/>
                             </p:selectOneMenu> 
 
-                            <h:outputText value="Grupo" style="position: absolute; top: 90px; left: 50px;font-size: 11px;"/>
+                            <h:outputText value="Grupo" style="position: absolute; top: 90px; left: 30px;font-size: 11px;"/>
                             <p:inputText value="#{controlNReporteNomina.parametroDeInforme.grupo.descripcion}" id="grupoParametro" style="position: absolute; top: 85px; left: 130px;font-size: 11px;height: 10px;width: 90px;" onclick="select();">
                                 <p:ajax event="click" listener="#{controlNReporteNomina.posicionCelda(4)}" process="@this"/> 
                                 <p:ajax event="change" listener="#{controlNReporteNomina.autocompletarGeneral('GRUPO', controlNReporteNomina.parametroDeInforme.grupo.descripcion)}" update="grupoParametro" process="@this"/>
                                 <p:ajax event="dblclick" listener="#{controlNReporteNomina.dialogosParametros(4)}" process="@this"/>
                             </p:inputText>
 
-                            <h:outputText value="Ubi. Geográfica" style="position: absolute; top: 115px; left: 50px;font-size: 11px;"/>
+                            <h:outputText value="Ubi. Geográfica" style="position: absolute; top: 115px; left: 30px;font-size: 11px;"/>
                             <p:inputText value="#{controlNReporteNomina.parametroDeInforme.ubicaciongeografica.descripcion}" id="ubicacionGeograficaParametro" style="position: absolute; top: 110px; left: 130px;font-size: 11px;height: 10px;width: 120px;" onclick="select();">
                                 <p:ajax event="click" listener="#{controlNReporteNomina.posicionCelda(5)}" process="@this"/> 
                                 <p:ajax event="change" listener="#{controlNReporteNomina.autocompletarGeneral('UBIGEOGRAFICA', controlNReporteNomina.parametroDeInforme.ubicaciongeografica.descripcion)}" update="ubicacionGeograficaParametro" process="@this"/>
                                 <p:ajax event="dblclick" listener="#{controlNReporteNomina.dialogosParametros(5)}" process="@this"/>
                             </p:inputText>
 
-                            <h:outputText value="Tipo Asociación" style="position: absolute; top: 140px; left: 50px;font-size: 11px;"/>
+                            <h:outputText value="Tipo Asociación" style="position: absolute; top: 140px; left: 30px;font-size: 11px;"/>
                             <p:inputText value="#{controlNReporteNomina.parametroDeInforme.tipoasociacion.descripcion}" id="tipoAsociacionParametro" style="position: absolute; top: 135px; left: 130px;font-size: 11px;height: 10px;width: 120px;" onclick="select();">
                                 <p:ajax event="click" listener="#{controlNReporteNomina.posicionCelda(6)}" process="@this"/> 
                                 <p:ajax event="change" listener="#{controlNReporteNomina.autocompletarGeneral('TIPOASOCIACION', controlNReporteNomina.parametroDeInforme.tipoasociacion.descripcion)}" update="tipoAsociacionParametro" process="@this"/>
@@ -196,41 +196,41 @@
                             <p:separator id="separator"  style="vertical-align: central;position: absolute;height: 140px;width: 1px;top: 5px;left: 460px "/>  
 
                             <h:outputText value="Estructura" style="position: absolute; top: 15px; left: 480px;font-size: 11px;"/>
-                            <p:inputText value="#{controlNReporteNomina.parametroDeInforme.localizacion.nombre}" id="estructuraParametro" style="position: absolute; top: 10px; left: 560px;font-size: 11px;height: 10px;width: 180px;" onclick="select();">
+                            <p:inputText value="#{controlNReporteNomina.parametroDeInforme.localizacion.nombre}" id="estructuraParametro" style="position: absolute; top: 10px; left: 580px;font-size: 11px;height: 10px;width: 180px;" onclick="select();">
                                 <p:ajax event="click" listener="#{controlNReporteNomina.posicionCelda(11)}" process="@this"/> 
                                 <p:ajax event="change" listener="#{controlNReporteNomina.autocompletarGeneral('ESTRUCTURA', controlNReporteNomina.parametroDeInforme.localizacion.nombre)}" update="estructuraParametro" process="@this"/>
                                 <p:ajax event="dblclick" listener="#{controlNReporteNomina.dialogosParametros(11)}" process="@this"/>
                             </p:inputText>
 
                             <h:outputText value="Tipo Trabajador" style="position: absolute; top: 40px; left: 480px;font-size: 11px;"/>
-                            <p:inputText value="#{controlNReporteNomina.parametroDeInforme.tipotrabajador.nombre}" id="tipoTrabajadorParametro" style="position: absolute; top: 35px; left: 560px;font-size: 11px;height: 10px;width: 180px;" onclick="select();">
+                            <p:inputText value="#{controlNReporteNomina.parametroDeInforme.tipotrabajador.nombre}" id="tipoTrabajadorParametro" style="position: absolute; top: 35px; left: 580px;font-size: 11px;height: 10px;width: 180px;" onclick="select();">
                                 <p:ajax event="click" listener="#{controlNReporteNomina.posicionCelda(12)}" process="@this"/> 
                                 <p:ajax event="change" listener="#{controlNReporteNomina.autocompletarGeneral('TIPOTRABAJADOR', controlNReporteNomina.parametroDeInforme.tipotrabajador.nombre)}" update="tipoTrabajadorParametro" process="@this"/>
                                 <p:ajax event="dblclick" listener="#{controlNReporteNomina.dialogosParametros(12)}" process="@this"/>
                             </p:inputText>
 
                             <h:outputText value="Tercero" style="position: absolute; top: 65px; left: 480px;font-size: 11px;"/>
-                            <p:inputText value="#{controlNReporteNomina.parametroDeInforme.tercero.nombre}" id="terceroParametro" style="position: absolute; top: 58px; left: 560px;font-size: 11px;height: 10px;width: 180px;" onclick="select();">
+                            <p:inputText value="#{controlNReporteNomina.parametroDeInforme.tercero.nombre}" id="terceroParametro" style="position: absolute; top: 58px; left: 580px;font-size: 11px;height: 10px;width: 180px;" onclick="select();">
                                 <p:ajax event="click" listener="#{controlNReporteNomina.posicionCelda(13)}" process="@this"/> 
                                 <p:ajax event="change" listener="#{controlNReporteNomina.autocompletarGeneral('TERCERO', controlNReporteNomina.parametroDeInforme.tercero.nombre)}" update="terceroParametro" process="@this"/>
                                 <p:ajax event="dblclick" listener="#{controlNReporteNomina.dialogosParametros(13)}" process="@this"/>
                             </p:inputText>
 
                             <h:outputText value="Proceso" style="position: absolute; top: 90px; left: 480px;font-size: 11px;"/>
-                            <p:inputText value="#{controlNReporteNomina.parametroDeInforme.proceso.descripcion}" id="procesoParametro" style="position: absolute; top: 85px; left: 560px;font-size: 11px;height: 10px;width: 180px;" onclick="select();">
+                            <p:inputText value="#{controlNReporteNomina.parametroDeInforme.proceso.descripcion}" id="procesoParametro" style="position: absolute; top: 85px; left: 580px;font-size: 11px;height: 10px;width: 180px;" onclick="select();">
                                 <p:ajax event="click" listener="#{controlNReporteNomina.posicionCelda(14)}" process="@this"/> 
                                 <p:ajax event="change" listener="#{controlNReporteNomina.autocompletarGeneral('PROCESO', controlNReporteNomina.parametroDeInforme.proceso.descripcion)}" update="procesoParametro" process="@this"/>
                                 <p:ajax event="dblclick" listener="#{controlNReporteNomina.dialogosParametros(14)}" process="@this"/>
                             </p:inputText>
 
                             <h:outputText value="Notas" style="position: absolute; top: 115px; left: 480px;font-size: 11px;"/>
-                            <p:inputText value="#{controlNReporteNomina.parametroDeInforme.mensajedesprendible}" id="notasParametro" style="position: absolute; top: 110px; left: 560px;font-size: 11px;height: 10px;width: 180px;text-transform: uppercase" onclick="select();">
+                            <p:inputText value="#{controlNReporteNomina.parametroDeInforme.mensajedesprendible}" id="notasParametro" style="position: absolute; top: 110px; left: 580px;font-size: 11px;height: 10px;width: 180px;text-transform: uppercase" onclick="select();">
                                 <p:ajax event="click" listener="#{controlNReporteNomina.posicionCelda(15)}" process="@this"/> 
                                 <p:ajax event="change" listener="#{controlNReporteNomina.modificarParametroInforme()}" process="@this"/>
                             </p:inputText>
 
                             <h:outputText value="Asociación" style="position: absolute; top: 140px; left: 480px;font-size: 11px;"/>
-                            <p:inputText value="#{controlNReporteNomina.parametroDeInforme.asociacion.descripcion}" id="asociacionParametro" style="position: absolute; top: 135px; left: 560px;font-size: 11px;height: 10px;width: 180px" onclick="select();">
+                            <p:inputText value="#{controlNReporteNomina.parametroDeInforme.asociacion.descripcion}" id="asociacionParametro" style="position: absolute; top: 135px; left: 580px;font-size: 11px;height: 10px;width: 180px" onclick="select();">
                                 <p:ajax event="click" listener="#{controlNReporteNomina.posicionCelda(16)}" process="@this"/> 
                                 <p:ajax event="change" listener="#{controlNReporteNomina.autocompletarGeneral('ASOCIACION', controlNReporteNomina.parametroDeInforme.asociacion.descripcion)}" update="asociacionParametro" process="@this"/>
                                 <p:ajax event="dblclick" listener="#{controlNReporteNomina.dialogosParametros(16)}" process="@this"/>
